Fixed canvas z-index and added basic node creation and drawing
Fixed canvas z-index as the canvas couldn't be interacted with due to its negative z-index. Added basic node creation and drawing. Used an increment to set the nodes value (0, 1, 2, etc.)

--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ p,b,i,a {
 }
 
 nav {
+    position: absolute;
+    width: 100%;
+    z-index: 1;
     display: flex;
     background-color: #444488;
     padding: 10px
@@ -69,14 +72,10 @@ nav > div > h1 {
 }
 
 #canvas {
-    position: absolute;
-    top: 0px;
-    left: 0px;
     background-color: #222222;
     margin: auto;
     width: 100%;
     height: 100%;
-    z-index: -1;
 }
 
 @media only screen and (max-width: 1024px) {
